<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneSignUpActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signed Out"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:inputType="phone"
            android:hint="+20"/>
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:inputType="phone"
            android:hint="@string/phone_number"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_code"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/send_code"
        android:onClick="sendCode"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend_code"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/resend_code"
        android:onClick="resendCode"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/code_text"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:paddingEnd="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/code" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_code"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/verify_code"
        android:onClick="verifyCode"
        android:layout_height="wrap_content"/>
</LinearLayout>