<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="@dimen/_12sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_user_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:boxStrokeWidth="@dimen/_3sdp"
        app:boxStrokeWidthFocused="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_25sdp"
        app:boxCornerRadiusBottomStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:boxStrokeColor="@color/purple_700"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:enabled="false"
            android:id="@+id/profile_et_user_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:typeface="serif"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:boxStrokeWidth="@dimen/_3sdp"
        app:boxStrokeWidthFocused="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_25sdp"
        app:boxCornerRadiusBottomStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:boxStrokeColor="@color/purple_700"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/profile_et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/username"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:typeface="serif"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:boxStrokeWidth="@dimen/_3sdp"
        app:boxStrokeWidthFocused="@dimen/_3sdp"
        app:boxCornerRadiusTopEnd="@dimen/_25sdp"
        app:boxCornerRadiusBottomStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:boxStrokeColor="@color/purple_700"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/profile_et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/phone_number"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:typeface="serif"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:id="@+id/profile_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>